@@ -1,3 +1,8 @@
+2006-08-03 [colin]	0.10.2cvs2
+
+	* src/gtkhtml2_viewer.c
+		Use base href in <a> links too
+
 2006-08-03 [colin]	0.10.2cvs1
 
 	* src/gtkhtml2_viewer.c
